<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="solutions.ranajawad.calculator.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/almendra_display"
        android:gravity="center"
        android:text="@string/calculator_by_rana_jawad"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="jelly_bean" />

    <EditText
        android:id="@+id/edittext1"
        android:layout_width="match_parent"
        android:layout_height="146dp"
        android:gravity="fill_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.775"
        tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/btnac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ac"
                android:background="@drawable/button"
                android:layout_margin="2dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnclr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="⌫"
                android:background="@drawable/symbolbtn"
                android:layout_margin="2dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnperc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/percentage"
                android:background="@drawable/symbolbtn"
                android:layout_margin="2dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btndiv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/divide"
                android:background="@drawable/symbolbtn"
                android:layout_margin="2dp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints,UselessLeaf">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_7"
                android:background="@drawable/numbtn"
                android:layout_margin="2dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_8"
                android:background="@drawable/numbtn"
                android:layout_margin="2dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_9"
                android:background="@drawable/numbtn"
                android:layout_margin="2dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnmul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/x"
                android:background="@drawable/symbolbtn"
                android:layout_margin="2dp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints,UselessLeaf">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_4"
                android:background="@drawable/numbtn"
                android:layout_margin="2dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_5"
                android:background="@drawable/numbtn"
                android:layout_margin="2dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_6"
                android:background="@drawable/numbtn"
                android:layout_margin="2dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnmin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/min"
                android:background="@drawable/symbolbtn"
                android:layout_margin="2dp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints,UselessLeaf">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1"
                android:background="@drawable/numbtn"
                android:layout_margin="2dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_2"
                android:background="@drawable/numbtn"
                android:layout_margin="2dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_3"
                android:background="@drawable/numbtn"
                android:layout_margin="2dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnplus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/plus"
                android:background="@drawable/symbolbtn"
                android:layout_margin="2dp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints,UselessLeaf">

            <Button
                android:id="@+id/btnzero"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_0"
                android:background="@drawable/numbtn"
                android:layout_margin="2dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnpnt"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_."
                android:background="@drawable/numbtn"
                android:layout_margin="2dp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btneql"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/equalbtn"
                android:text="@string/eql"
                android:layout_margin="2dp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>